# graspit_simulator

./: .gitignore  README.md  rosdep.yaml  stack.xml
dbase_grasp_planner/: CMakeLists.txt  dbase_grasp_planning.pro  mainpage.dox  manifest.xml  setenv.sh
dbase_grasp_planner/include/dbase_grasp_planner/: grasp_clustering_task.h  grasp_planning_task.h  guided_grasp_planning_task.h  lcg_grasp_planning_task.h  velo_grasp_planning_task.h
dbase_grasp_planner/src/: dbase_planner_plugin.cpp  grasp_clustering_task.cpp  grasp_planning_task.cpp  guided_grasp_planning_task.cpp  lcg_grasp_planning_task.cpp  velo_grasp_planning_task.cpp
graspit/: CMakeLists.txt  Makefile.graspit.git  Makefile.graspit.svn  Makefile.graspit.tarball  graspit_1404_svn.patch  graspit_git.patch
graspit_dbase_tasks/: CMakeLists.txt  mainpage.dox  manifest.xml
graspit_dbase_tasks/include/graspit_dbase_tasks/: dbTask.h  dbTaskDispatcher.h
graspit_dbase_tasks/src/: dbTaskDispatcher.cpp
graspit_interface/: mainpage.dox  manifest.xml
graspit_interface/include/graspit_interface/: ros_graspit_interface.h
graspit_interface/src/: main.cpp  ros_graspit_interface.cpp
graspit_interface_msgs/: manifest.xml
graspit_interface_msgs/srv/: ClearBodies.srv  LoadObstacle.srv  SimulateScan.srv  VerifyGrasp.srv
graspit_ros_planning/: CMakeLists.txt  manifest.xml
graspit_ros_planning/include/graspit_ros_planning/: ros_graspit_interface.h
graspit_ros_planning/launch/: ros_graspit_interface.launch
graspit_ros_planning/src/: main.cpp  ros_graspit_interface.cpp
graspit_ros_planning_msgs/: mainpage.dox  manifest.xml
graspit_ros_planning_msgs/srv/: GenerateGrasp.srv  TestGrasp.srv
